# fermilab-util_kcron

./: CMakeLists.txt  Makefile  README.md  fermilab-util_kcron.spec
.github/workflows/: ci.yaml
doc/: CMakeLists.txt  kcron.doc
src/C/: CMakeLists.txt  autoconf.h.in  client-keytab-name.c  init-kcron-keytab.c  kcron_caps.h  kcron_empty_keytab_file.h  kcron_filename.h  kcron_landlock.h  kcron_seccomp.h  kcron_setup.h
